--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-api.security.token.secret=${AWS_TOKEN_SECRET}
+api.security.token.secret=${TOKEN_SECRET}
 api.aws.access-key=${AWS_ACCESS_KEY}
 api.aws.secret-key=${AWS_SECRET_KEY}
 api.aws.bucket-url=${AWS_BUCKET_URL}
