--- a/pom.xml
+++ b/pom.xml
@@ -136,17 +136,18 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.8</version>
+				<version>0.8.11</version>
+				<configuration>
+					<excludes>
+						<exclude>sun/**</exclude>
+						<exclude>java/**</exclude>
+						<exclude>javax/**</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
 							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>prepare-package</phase>
-						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
