refactor: environments and cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.application.name=k-board-api
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-api.security.token.secret=${TOKEN_SECRET}
-api.aws.access-key=${AWS_ACCESS_KEY}
-api.aws.secret-key=${AWS_SECRET_KEY}
-api.aws.bucket-url=${AWS_BUCKET_URL}
+
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+
+spring.profiles.active=dev
